--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,6 +3,8 @@ project(toolchain C CXX ASM)
 
 include_directories(include)
 
+add_subdirectory(compiler-rt)
+
 add_library(startup OBJECT init.c)
 set_source_files_properties(init.c PROPERTIES COMPILE_FLAGS -fno-builtin)
 
